--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,13 @@
 cmake_minimum_required(VERSION 3.27)
-project(openGL_App C CXX)
+project(openGL_App C)
 
-set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_C_STANDARD 23)
+set(CMAKE_C_FLAGS "-Werror -Wall -Werror=vla")
+set(CMAKE_C_FLAGS "-march=native")
+
 add_subdirectory(./glfw-3.3)
 include_directories(./include)
 
-add_executable(openGL_App main.cpp src/glad.c)
+add_executable(openGL_App main.c src/glad.c
+        utils/utils.c)
 target_link_libraries(openGL_App glfw)
