mark stb_image.h as linguist-vendored

--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,7 @@
 ; ignore files in lang stats
 glfw-3.3/** linguist-vendored
 glm/** linguist-vendored
+include/stb_image.h linguist-vendored
 
 src/glad.c linguist-generated
 include/glad/** linguist-generated
