add macos app generation in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,37 +17,67 @@ set(CMAKE_C_FLAGS ${OPTIMIZATION_FLAGS})
 add_subdirectory(./glfw-3.3)
 
 find_package(glm REQUIRED)
-if (glm_FOUND)
-    include_directories(${GLM_INCLUDE_DIRS})
-else ()
-    message(FATAL_ERROR "Error: Unable to find GLM. Try try install it:")
-    if (APPLE) # brew one love
-        message(STATUS "$ brew install glm") # For macOS
-    elseif (WIN32) # Install GLM via vcpkg
-        message(STATUS ".\\vcpkg install glm") # For Windows
-        message(STATUS "This command will download and install GLM for you, making it available for your projects.")
-        message(STATUS "For Visual Studio projects, vcpkg integrates automatically after the installation,
+if(glm_FOUND)
+  include_directories(${GLM_INCLUDE_DIRS})
+else()
+  message(FATAL_ERROR "Error: Unable to find GLM. Try try install it:")
+  if(APPLE) # brew one love
+    message(STATUS "$ brew install glm") # For macOS
+  elseif(WIN32) # Install GLM via vcpkg
+    message(STATUS ".\\vcpkg install glm") # For Windows
+    message(STATUS "This command will download and install GLM for you, making it available for your projects.")
+    message(STATUS "For Visual Studio projects, vcpkg integrates automatically after the installation,
         or you may need to run `$ .\\vcpkg integrate install` in your vcpkg directory.")
-    elseif (UNIX AND NOT APPLE)
-        # Determine the Linux distribution and suggest an installation command
-        execute_process(COMMAND cat /etc/os-release OUTPUT_VARIABLE OS_RELEASE_CONTENTS)
-        if (OS_RELEASE_CONTENTS MATCHES "ID_LIKE=debian")
-            set(INSTALL_COMMAND "sudo apt-get install libglm-dev")
-        elseif (OS_RELEASE_CONTENTS MATCHES "ID=fedora" OR OS_RELEASE_CONTENTS MATCHES "ID_LIKE=fedora")
-            set(INSTALL_COMMAND "sudo dnf install glm-devel")
-        elseif (OS_RELEASE_CONTENTS MATCHES "ID=arch")
-            set(INSTALL_COMMAND "sudo pacman -S glm")
-        else ()
-            set(INSTALL_COMMAND "Please install GLM for your Linux distribution")
-        endif ()
-          message(FATAL_ERROR "GLM not found. To install GLM, run: ${INSTALL_COMMAND}")
-    endif ()
-endif ()
+  elseif(UNIX AND NOT APPLE)
+    # Determine the Linux distribution and suggest an installation command
+    execute_process(COMMAND cat /etc/os-release OUTPUT_VARIABLE OS_RELEASE_CONTENTS)
+    if(OS_RELEASE_CONTENTS MATCHES "ID_LIKE=debian")
+      set(INSTALL_COMMAND "sudo apt-get install libglm-dev")
+    elseif(OS_RELEASE_CONTENTS MATCHES "ID=fedora" OR OS_RELEASE_CONTENTS MATCHES "ID_LIKE=fedora")
+      set(INSTALL_COMMAND "sudo dnf install glm-devel")
+    elseif(OS_RELEASE_CONTENTS MATCHES "ID=arch")
+      set(INSTALL_COMMAND "sudo pacman -S glm")
+    else()
+      set(INSTALL_COMMAND "Please install GLM for your Linux distribution")
+    endif()
+    message(FATAL_ERROR "GLM not found. To install GLM, run: ${INSTALL_COMMAND}")
+  endif()
+endif()
 
 include_directories(./include)
 
-add_executable(${PROJECT_NAME} src/main.cpp src/glad.c
-        src/utils/utils.c src/utils/graphicUtils.c
-        src/shader.cpp)
+file(GLOB_RECURSE RES_SOURCES_SHADERS "shaders/*.*")
+file(GLOB_RECURSE RES_SOURCES_TEXTURES "textures/*.*")
+set(SRC src/main.cpp src/glad.c src/utils/utils.c src/utils/graphicUtils.c src/shader.cpp)
+
+add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${SRC} ${RES_SOURCES_SHADERS} ${RES_SOURCES_TEXTURES})
+
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    OUTPUT_NAME "${PROJECT_NAME}"
+    MACOSX_BUNDLE TRUE
+    MACOSX_FRAMEWORK_IDENTIFIER com.tirlarim.${PROJECT_NAME}
+    MACOSX_BUNDLE_GUI_IDENTIFIER com.tirlarim.${PROJECT_NAME}
+    MACOSX_BUNDLE_BUNDLE_NAME "${PROJECT_NAME}"
+    MACOSX_BUNDLE_BUNDLE_VERSION "0.6.1"
+    MACOSX_BUNDLE_SHORT_VERSION_STRING "0.6"
+    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/resources/Info.plist
+    RESOURCE ./resources/icon.icns
+    XCODE_ATTRIBUTE_ENABLE_HARDENED_RUNTIME TRUE
+    XCODE_ATTRIBUTE_EXECUTABLE_NAME "${PROJECT_NAME}"
+)
+
+set_source_files_properties(resources/icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+target_sources(${PROJECT_NAME} PRIVATE resources/icon.icns)
+if(APPLE)
+  foreach(RES_FILE ${RES_SOURCES_SHADERS})
+    file(RELATIVE_PATH RES_PATH "${CMAKE_CURRENT_SOURCE_DIR}/shaders" ${RES_FILE})
+    set_property(SOURCE ${RES_FILE} PROPERTY MACOSX_PACKAGE_LOCATION "Resources/shaders")
+  endforeach(RES_FILE)
+  foreach(RES_FILE ${RES_SOURCES_TEXTURES})
+    file(RELATIVE_PATH RES_PATH "${CMAKE_CURRENT_SOURCE_DIR}/textures" ${RES_FILE})
+    set_property(SOURCE ${RES_FILE} PROPERTY MACOSX_PACKAGE_LOCATION "Resources/textures")
+  endforeach(RES_FILE)
+endif()
+
 target_link_libraries(${PROJECT_NAME} glfw)
 target_link_libraries(${PROJECT_NAME} ${GLM_LIBRARIES})
