fix vbo memory leak, fix Info.plist CFBundleIdentifier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(openGL_App CXX C)
 
 set(ERROR_FLAGS "-Werror -Wall -Werror=vla")
 set(OPTIMIZATION_FLAGS "-march=native")
+set(DEV_DOMAIN com)
+set(DEV_NAME tirlarim)
+set(MACOS_ICON_PATH ./resources/icon.icns)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -27,7 +30,7 @@ set(SRC
     src/utils/inputWorker.hpp
     src/utils/graphicUtils.c
     src/camera.cpp
-    src/camera.h
+    src/camera.hpp
 )
 
 if(APPLE)
@@ -37,21 +40,21 @@ else()
 endif()
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
-    OUTPUT_NAME "${PROJECT_NAME}"
+    OUTPUT_NAME ${PROJECT_NAME}
     MACOSX_BUNDLE TRUE
-    MACOSX_FRAMEWORK_IDENTIFIER com.tirlarim.${PROJECT_NAME}
-    MACOSX_BUNDLE_GUI_IDENTIFIER com.tirlarim.${PROJECT_NAME}
-    MACOSX_BUNDLE_BUNDLE_NAME "${PROJECT_NAME}"
-    MACOSX_BUNDLE_BUNDLE_VERSION "0.6.1"
-    MACOSX_BUNDLE_SHORT_VERSION_STRING "0.6"
+    MACOSX_FRAMEWORK_IDENTIFIER ${DEV_DOMAIN}.${DEV_NAME}.${PROJECT_NAME}
+    MACOSX_BUNDLE_GUI_IDENTIFIER ${DEV_DOMAIN}.${DEV_NAME}.${PROJECT_NAME}
+    MACOSX_BUNDLE_BUNDLE_NAME ${PROJECT_NAME}
+    MACOSX_BUNDLE_BUNDLE_VERSION "0.11.1"
+    MACOSX_BUNDLE_SHORT_VERSION_STRING "0.11"
     MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/resources/Info.plist
-    RESOURCE ./resources/icon.icns
+    RESOURCE ${MACOS_ICON_PATH}
     XCODE_ATTRIBUTE_ENABLE_HARDENED_RUNTIME TRUE
-    XCODE_ATTRIBUTE_EXECUTABLE_NAME "${PROJECT_NAME}"
+    XCODE_ATTRIBUTE_EXECUTABLE_NAME ${PROJECT_NAME}
 )
 
-set_source_files_properties(resources/icon.icns PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
-target_sources(${PROJECT_NAME} PRIVATE resources/icon.icns)
+set_source_files_properties(${MACOS_ICON_PATH} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+target_sources(${PROJECT_NAME} PRIVATE ${MACOS_ICON_PATH})
 if(APPLE)
   foreach(RES_FILE ${RES_SOURCES_SHADERS})
     file(RELATIVE_PATH RES_PATH "${CMAKE_CURRENT_SOURCE_DIR}/shaders" ${RES_FILE})
