--- a/resources/Info.plist
+++ b/resources/Info.plist
@@ -9,7 +9,7 @@
         <key>CFBundleIconFile</key>
         <string>icon.icns</string>
         <key>CFBundleIdentifier</key>
-        <string>my.domain.style.identifier</string>
+        <string>${MACOSX_BUNDLE_GUI_IDENTIFIER}</string>
         <key>CFBundleInfoDictionaryVersion</key>
         <string>6.0</string>
         <key>CFBundleName</key>
