add materials. All materials in resources/materials/data.csv

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,14 @@ include_directories(./deps)
 
 file(GLOB_RECURSE RES_SOURCES_SHADERS "shaders/*.*")
 file(GLOB_RECURSE RES_SOURCES_TEXTURES "textures/*.*")
+file(GLOB_RECURSE RES_SOURCES_MATERIALS "resources/materials/*.*")
+
+set(RESOURCES
+    ${RES_SOURCES_SHADERS}
+    ${RES_SOURCES_TEXTURES}
+    ${RES_SOURCES_MATERIALS}
+)
+
 set(SRC
     src/main.cpp deps/glad/glad.c src/utils/utils.c src/utils/graphicUtils.c
     src/shader.cpp src/shader.hpp
@@ -32,28 +40,27 @@ set(SRC
 )
 
 if(APPLE)
-  add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${SRC} ${RES_SOURCES_SHADERS} ${RES_SOURCES_TEXTURES})
+  add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${SRC} ${RESOURCES})
 else()
   add_executable(${PROJECT_NAME} ${SRC})
 endif()
 
-set_target_properties(${PROJECT_NAME} PROPERTIES
-    OUTPUT_NAME ${PROJECT_NAME}
-    MACOSX_BUNDLE TRUE
-    MACOSX_FRAMEWORK_IDENTIFIER ${DEV_DOMAIN}.${DEV_NAME}.${PROJECT_NAME}
-    MACOSX_BUNDLE_GUI_IDENTIFIER ${DEV_DOMAIN}.${DEV_NAME}.${PROJECT_NAME}
-    MACOSX_BUNDLE_BUNDLE_NAME ${PROJECT_NAME}
-    MACOSX_BUNDLE_BUNDLE_VERSION "0.11.1"
-    MACOSX_BUNDLE_SHORT_VERSION_STRING "0.11"
-    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/resources/Info.plist
-    RESOURCE ${MACOS_ICON_PATH}
-    XCODE_ATTRIBUTE_ENABLE_HARDENED_RUNTIME TRUE
-    XCODE_ATTRIBUTE_EXECUTABLE_NAME ${PROJECT_NAME}
-)
-
-set_source_files_properties(${MACOS_ICON_PATH} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
-target_sources(${PROJECT_NAME} PRIVATE ${MACOS_ICON_PATH})
 if(APPLE)
+  set_target_properties(${PROJECT_NAME} PROPERTIES
+      OUTPUT_NAME ${PROJECT_NAME}
+      MACOSX_BUNDLE TRUE
+      MACOSX_FRAMEWORK_IDENTIFIER ${DEV_DOMAIN}.${DEV_NAME}.${PROJECT_NAME}
+      MACOSX_BUNDLE_GUI_IDENTIFIER ${DEV_DOMAIN}.${DEV_NAME}.${PROJECT_NAME}
+      MACOSX_BUNDLE_BUNDLE_NAME ${PROJECT_NAME}
+      MACOSX_BUNDLE_BUNDLE_VERSION "0.11.1"
+      MACOSX_BUNDLE_SHORT_VERSION_STRING "0.11"
+      MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/resources/Info.plist
+      RESOURCE ${MACOS_ICON_PATH}
+      XCODE_ATTRIBUTE_ENABLE_HARDENED_RUNTIME TRUE
+      XCODE_ATTRIBUTE_EXECUTABLE_NAME ${PROJECT_NAME}
+  )
+  set_source_files_properties(${MACOS_ICON_PATH} PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
+  target_sources(${PROJECT_NAME} PRIVATE ${MACOS_ICON_PATH})
   foreach(RES_FILE ${RES_SOURCES_SHADERS})
     file(RELATIVE_PATH RES_PATH "${CMAKE_CURRENT_SOURCE_DIR}/shaders" ${RES_FILE})
     set_property(SOURCE ${RES_FILE} PROPERTY MACOSX_PACKAGE_LOCATION "Resources/shaders")
@@ -61,6 +68,10 @@ if(APPLE)
   foreach(RES_FILE ${RES_SOURCES_TEXTURES})
     file(RELATIVE_PATH RES_PATH "${CMAKE_CURRENT_SOURCE_DIR}/textures" ${RES_FILE})
     set_property(SOURCE ${RES_FILE} PROPERTY MACOSX_PACKAGE_LOCATION "Resources/textures")
+  endforeach(RES_FILE)
+  foreach(RES_FILE ${RES_SOURCES_MATERIALS})
+    file(RELATIVE_PATH RES_PATH "${CMAKE_CURRENT_SOURCE_DIR}/resources/materials" ${RES_FILE})
+    set_property(SOURCE ${RES_FILE} PROPERTY MACOSX_PACKAGE_LOCATION "Resources/materials")
   endforeach(RES_FILE)
 endif()
 
